Fixes + improvements * Rejoin issue - reusing square ids * Animation behaviour - visible only for winner * Block squares that already have another square * Rejoin as spectator button should be disabled when not in game

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,5 +12,5 @@ body, html {
 
   position: absolute;
   top: 0px;//200px;
-  left: calc(50% - 5px);
+  left: calc(50% - 14px);
 }
